--- a/animations/index.css
+++ b/animations/index.css
@@ -3,11 +3,11 @@
     transform: translate(0, 0);
   }
 
-  16%, 20%, 24% {
+  16%, 24% {
     transform: translate(24px, -22px);
   }
 
-  36%, 40%, 44% {
+  36%, 44% {
     transform: translate(52px, -42px);
   }
 
@@ -19,11 +19,11 @@
     transform: translate(52px, 0);
   }
 
-  66%, 70%, 74% {
+  66%, 74% {
     transform: translate(28px, -22px);
   }
 
-  86%, 90%, 94% {
+  86%, 94% {
     transform: translate(0, -42px);
   }
 
@@ -98,14 +98,14 @@
 
 #slider {
   /* display: none; */
-  padding: 20px 0;
+  padding: 20px 100px;
 }
 
 .slider-block {
   height: 100px;
   width: 100px;
   background-color: orange;
-  transition: 1s cubic-bezier(0.32, -0.65, .77, 1.31);
+  transition: 2s cubic-bezier(0.32, 1.57, 0.83, 1.43);
 }
 
 .slider-block:hover {
